<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/startup_color_three">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_startup_pagethree_permission"
            android:textColor="@color/bg_white"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
        android:id="@+id/btnPermissionAccessibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_custom_button_page_three_color"
        android:text="@string/text_startup_pagethree_permission_btn"
        android:textColor="@color/bg_white" />

        <Button
            android:id="@+id/btnSecurityFingerPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_custom_button_page_three_color"
            android:text="@string/text_startup_pagethree_security_btn"
            android:textColor="@color/bg_white"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>